fix nav bar height on mobile

--- a/frontend/packages/client/src/App.sass
+++ b/frontend/packages/client/src/App.sass
@@ -181,8 +181,8 @@ code
 	margin-bottom: 2.5rem
 @include mobile
 	.header-spacing
-		padding-bottom: 10px
-		padding-top: 10px
+		padding-bottom: 7px
+		padding-top: 7px
 	.section
 		padding-top: 1.57rem !important
 		padding-bottom: 3rem
